--- a/camera.html
+++ b/camera.html
@@ -220,11 +220,9 @@
 				box.style.width = barcode.boundingBox.width + 'px'
 				overlay.appendChild(box)
 			}
-			if (`${barcodes}` != `${old_barcodes}`) {
+			if (`${JSON.stringify(barcodes)}` != `${JSON.stringify(old_barcodes)}`) {
 				old_barcodes = barcodes
 				snap('Code')
-			} else {
-				log(`${barcodes} == ${old_barcodes}`)
 			}
 			return barcodes
 		}
