--- a/camera.html
+++ b/camera.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=0.5">
 	<title>Camera / QR scanner, by Cees Timmerman 2022-08-08</title>
 	<link rel="icon"
-		href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%223 10 100 100%22><text y=%22.9em%22 font-size=%2290%22>📷</text></svg>">
+		href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%228 14 100 100%22><text y=%22.9em%22 font-size=%2290%22>📷</text></svg>">
 	<style>
 		body {
 			margin: 0;
@@ -271,12 +271,14 @@
 		}
 
 		const saying = new Set()
-		function say(s, rate=1.0, pitch=1.0, lang="en-US"){
-			// rate: [0.1, 10], pitch: [0, 2], lang: BCP 47 language tag
+		function say(s, rate=1.0, pitch=1.0, lang="en-US", volume=1.0){
+			// rate: (0.1,10), pitch: (0,2), lang: BCP 47 language tag
+			// So 0.1 < rate < 10, see https://en.wikipedia.org/wiki/Interval_(mathematics)
 			const u = new SpeechSynthesisUtterance(s)
 			u.lang = lang
 			u.pitch = pitch
 			u.rate = rate
+			u.volume = volume
 			saying.add(u)
 			u.onend = e => {
 				saying.delete(e.utterance)
@@ -284,6 +286,12 @@
 			}
 			speechSynthesis.speak(u)
 		}
+		async function say_all_via_sleepy_jack(s){
+			say('a', 9, 1, "en-US", 0)  // Wake sleeping audio jack.
+			await sleep(1500).then(()=>say(s))
+		}
+		//let bad = setInterval(()=> say("Hello good morning"), 15000) // 13000 intermittendly.
+		let good = setInterval(()=> say_all_via_sleepy_jack("Hello good morning"), 15000)
 	</script>
 </body>
 </html>
