--- a/camera.html
+++ b/camera.html
@@ -291,7 +291,7 @@
 			await sleep(1500).then(()=>say(s))
 		}
 		//let bad = setInterval(()=> say("Hello good morning"), 15000) // 13000 intermittendly.
-		let good = setInterval(()=> say_all_via_sleepy_jack("Hello good morning"), 15000)
+		//let good = setInterval(()=> say_all_via_sleepy_jack("Hello good morning"), 15000)
 	</script>
 </body>
 </html>
