--- a/tournament/index.html
+++ b/tournament/index.html
@@ -32,9 +32,9 @@
 	<input type="button" onclick="pair_players()" value="Pair players for match">
 	<input type="text" id="duration" title="Match duration (hh:mm)" size="4" maxlength="6" value="50:00">
 	<input type="button" onclick="toggle_timer()" value="Start timer" id="btn_timer">
-	<video loop id="woke">
+	<video autoplay loop id="woke">
 		<source src="silent.ogx" type="audio/ogg">
-		Your browser does not support the video element used to keep the page active.
+		Your browser does not support the video element used to keep the page and audio jack active.
 	</video>
 	<div id="content"></div>
 	<div id="alertcontainer" onclick="this.style.visibility='hidden'"></div>
