--- a/counter.html
+++ b/counter.html
@@ -117,6 +117,10 @@
 <body ondblclick="dblclick(event)">
 	<div id="container"></div>
 	<p onclick="add_player()">Add player</p>
+	<video autoplay loop id="woke">
+		<source src="tournament/silent.ogx" type="audio/ogg">
+		Your browser does not support the video element used to keep the page and audio jack active.
+	</video>
 	<script>
 		'use strict'
 		// Prevent accidental reload on swipe up.
