--- a/dice.html
+++ b/dice.html
@@ -42,12 +42,13 @@
 		}
 
 		h1 {
+			margin: 0 0 0.5em 0;
 			text-shadow: 6px 6px 6px #00000066;
 		}
 
 		#results {
-			height: 52vh;
-			margin-bottom: 2em;
+			margin-bottom: 1em;
+			max-height: 52vh;
 			overflow: auto;
 			border: 1px solid var(--fgcolor);
 			border-radius: 0.5em;
@@ -60,7 +61,7 @@
 			border: 1px solid black;
 			border-radius: 0.5em;
 			display: inline-table;
-			margin: 1em;
+			margin: 0.5em;
 			padding: 0.5em;
 			box-shadow: 6px 6px 6px #00000066;
 			width: -moz-fit-content;
