--- a/counter.html
+++ b/counter.html
@@ -59,7 +59,7 @@
 			color: #ff000033;
 			font-size: 2em;
 			line-height: 0px;
-			margin-right: -28px;
+			margin-right: -0.6em;
 			vertical-align: sub;
 		}
 
