--- a/dice.html
+++ b/dice.html
@@ -37,17 +37,19 @@
 			color: var(--fgcolor);
 			font-family: sans-serif;
 			font-weight: bold;
+			margin: 2px;
 			text-align: center;
 			text-shadow: 1px 1px 1px #00000066;
 		}
 
 		h1 {
-			margin: 0 0 0.2em 0;
-			text-shadow: 6px 6px 6px #00000066;
+			font-size: 1.5em;
+			margin: 0 0 0.14em 0;
+			text-shadow: 3px 3px 3px #00000066;
 		}
 
 		#results {
-			margin-bottom: 1em;
+			margin-bottom: 0.2em;
 			max-height: 50vh;
 			overflow: auto;
 			border: 1px solid var(--fgcolor);
