allow modal from iframe

--- a/counter.html
+++ b/counter.html
@@ -125,7 +125,7 @@
 </head>
 
 <body ondblclick="dblclick(event)">
-	<iframe src="dice.html#black&white" sandbox="allow-scripts allow-same-origin"></iframe>
+	<iframe src="dice.html#black&white" sandbox="allow-same-origin allow-modals allow-scripts"></iframe>
 	<div id="container"></div>
 	<p onclick="add_player()" oncontextmenu="edit_source()">Add player</p>
 	<video autoplay loop id="woke">
