--- a/counter.html
+++ b/counter.html
@@ -17,8 +17,8 @@
 		}
 		iframe {
 			border: 0;
-			height: 50vh;
-			width: 90vw;
+			height: 25vh;
+			width: 100%;
 		}
 		input[type="color"] {
 			border: 0;
@@ -90,6 +90,31 @@
 			}
 			.flip {
 				margin: 1.18em 0.2em 0 0;
+			}
+		}
+		@media (max-width: 825px) {
+			iframe {
+				height: 97px;
+			}
+		}
+		@media (max-width: 430px) {
+			iframe {
+				height: 145px;
+			}
+		}
+		@media (max-width: 325px) {
+			iframe {
+				height: 194px;
+			}
+		}
+		@media (max-width: 266px) {
+			iframe {
+				height: 224px;
+			}
+		}
+		@media (max-width: 225px) {
+			iframe {
+				height: 273px;
 			}
 		}
 		@media (max-width: 375px) {
