--- a/dice.html
+++ b/dice.html
@@ -13,19 +13,16 @@
 			scrollbar-color: var(--fgcolor) transparent;
 			scrollbar-width: thin;
 		}
-
 		.styled-scrollbars::-webkit-scrollbar {
 			width: 10px;
 			height: 10px;
 		}
-
-		.styled-scrollbars::-webkit-scrollbar-thumb {
+		.styled-scrollbars::-webkit-scrollbar-thumb, .styled-scrollbars::-webkit-scrollbar-corner {
 			background-color: var(--bgcolor);
 			border: 1px outset;
 			border-color: var(--fgcolor);
 			border-radius: 5px;
 		}
-
 		.styled-scrollbars::-webkit-scrollbar-thumb:hover {
 			border-width: 2px;
 		}
@@ -37,7 +34,7 @@
 			color: var(--fgcolor);
 			font-family: sans-serif;
 			font-weight: bold;
-			margin: 2px;
+			margin: 0 8px;
 			text-align: center;
 			text-shadow: 1px 1px 1px #00000066;
 		}
@@ -49,21 +46,31 @@
 		}
 
 		#results {
-			margin-bottom: 0.2em;
-			max-height: 50vh;
+			height: 50vh;
+			min-height: 4em;
+			min-width: 4em;
 			overflow: auto;
 			border: 1px solid var(--fgcolor);
 			border-radius: 0.5em;
 			box-shadow: 6px 6px 6px #00000066 inset;
 		}
-
+		@media (min-width: 210px) {
+			h1 {
+				float: right;
+			}
+			#results {
+				height: 90vh;
+				width: 20vw;
+				float: left;
+			}
+		}
 		.die {
 			animation: spin 0.1s linear reverse 0;
 			background: var(--fgcolor);
 			border: 1px solid black;
 			border-radius: 0.5em;
 			display: inline-table;
-			margin: 0.5em;
+			margin: 6px;
 			padding: 0.5em;
 			box-shadow: 6px 6px 6px #00000066;
 			width: -moz-fit-content;
