Auto fit iframe.

--- a/dice.html
+++ b/dice.html
@@ -47,7 +47,7 @@
 
 		#results {
 			height: 50vh;
-			min-height: 4em;
+			min-height: 2em;
 			min-width: 4em;
 			overflow: auto;
 			border: 1px solid var(--fgcolor);
@@ -59,9 +59,10 @@
 				float: right;
 			}
 			#results {
-				height: 90vh;
-				width: 20vw;
 				float: left;
+				margin-top: 6px;
+				height: 89vh;
+				width: 20vw;
 			}
 		}
 		.die {
