--- a/counter.html
+++ b/counter.html
@@ -17,7 +17,7 @@
 		}
 		iframe {
 			border: 0;
-			height: 25vh;
+			height: 69px;
 			width: 100%;
 		}
 		input[type="color"] {
@@ -92,31 +92,33 @@
 				margin: 1.18em 0.2em 0 0;
 			}
 		}
-		@media (max-width: 825px) {
+		/*
+		@media (max-width: 869px) {
 			iframe {
-				height: 97px;
+				height: 105px;
 			}
 		}
-		@media (max-width: 430px) {
+		@media (max-width: 465px) {
 			iframe {
-				height: 145px;
+				height: 157px;
 			}
 		}
-		@media (max-width: 325px) {
+		@media (max-width: 350px) {
 			iframe {
-				height: 194px;
+				height: 209px;
 			}
 		}
-		@media (max-width: 266px) {
+		@media (max-width: 275px) {
 			iframe {
-				height: 224px;
+				height: 279px;
 			}
 		}
-		@media (max-width: 225px) {
+		@media (max-width: 240px) {
 			iframe {
-				height: 273px;
+				height: 292px;
 			}
 		}
+		*/
 		@media (max-width: 375px) {
 			.counter {
 				margin: 0.7em 0em;
@@ -150,7 +152,7 @@
 </head>
 
 <body ondblclick="dblclick(event)">
-	<iframe src="dice.html#black&white" sandbox="allow-same-origin allow-modals allow-scripts"></iframe>
+	<iframe id="dice" src="dice.html#black&white" sandbox="allow-same-origin allow-modals allow-scripts"></iframe>
 	<div id="container"></div>
 	<p onclick="add_player()" oncontextmenu="edit_source()">Add player</p>
 	<video autoplay loop id="woke">
@@ -229,6 +231,13 @@
 			e.preventDefault()
 			window.getSelection().empty()
 		}
+		// Because manually tweaking media rules per browser is a pain.
+		function fit_frame() {
+			window.dice.style.height = window.dice.contentDocument.body.scrollHeight + 'px'
+		}
+		// Doesn't trigger on wrap!
+		// new ResizeObserver(fit_frame).observe(window.dice.contentDocument.body)
+		setInterval(fit_frame, 50)
 	</script>
 </body>
 
