Leave dates to Git.

--- a/counter.html
+++ b/counter.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Life Counter by Cees Timmerman, 2022-07-05</title>
+	<title>Life Counter by Cees Timmerman</title>
 	<link rel="icon"
 	href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>🧮</text></svg>">
 	<style>
@@ -54,12 +54,12 @@
 			background: radial-gradient(white 40%, transparent);
 			color: black;
 		}
-		.life:before {
+		.life::before {
 			content: '♥';
 			color: #ff000033;
-			font-size: 2em;
+			font-size: 50px;
 			line-height: 0px;
-			margin-right: -0.6em;
+			margin-right: -30px;
 			vertical-align: sub;
 		}
 
