--- a/counter.html
+++ b/counter.html
@@ -57,9 +57,9 @@
 		.life::before {
 			content: '♥';
 			color: #ff000033;
-			font-size: 50px;
+			font-size: 1.4cm;
 			line-height: 0px;
-			margin-right: -30px;
+			margin-right: -0.8cm;
 			vertical-align: sub;
 		}
 
