❤️ emoji size might be more uniform than ASCII ♥'s.

--- a/counter.html
+++ b/counter.html
@@ -11,7 +11,7 @@
 			background-color: black;
 			color: white;
 			font-family: cursive;
-			font-size: 150%;
+			font-size: 5mm;
 			margin: 0;
 			text-align: center;
 		}
@@ -64,10 +64,8 @@
 			color: black;
 		}
 		.life::before {
-			content: '♥';
+			content: '❤️';
 			color: #ff000033;
-			font-size: 2em;
-    		line-height: 0.5em;
 			position: absolute;
 			vertical-align: sub;
 		}
