--- a/counter.html
+++ b/counter.html
@@ -65,7 +65,7 @@
 		}
 		.life::before {
 			content: '❤️';
-			color: #ff000033;
+			color: #0001;
 			position: absolute;
 			vertical-align: sub;
 		}
@@ -143,17 +143,52 @@
 			background: radial-gradient(rgb(255, 255, 190) 25%, black);
 			color: black;
 		}
+		.white::before {
+			content: '☀️';
+			color:#0001;
+			margin-left: -0.3em;
+			position: absolute;
+			vertical-align: sub;
+		}
 		.blue {
 			background: radial-gradient(rgb(0, 120, 255) 25%, black);
+		}
+		.blue::before {
+			content: '💧';
+			color: #0001;
+			margin-left: -0.3em;
+			position: absolute;
+			vertical-align: sub;
 		}
 		.black {
 			background: radial-gradient(rgb(60, 60, 60) 25%, black)
 		}
+		.black::before {
+			content: '💀';
+			color: #0001;
+			margin-left: -0.3em;
+			position: absolute;
+			vertical-align: sub;
+		}
 		.red {
 			background: radial-gradient(rgb(240, 60, 60) 25%, black);
 		}
+		.red::before {
+			content: '🔥';
+			color: #0001;
+			margin-left: -0.3em;
+			position: absolute;
+			vertical-align: sub;
+		}
 		.green {
 			background: radial-gradient(rgb(20, 180, 20) 25%, black);
+		}
+		.green::before {
+			content: '🌳';
+			color: #0001;
+			margin-left: -0.3em;
+			position: absolute;
+			vertical-align: sub;
 		}
 	</style>
 </head>
