--- a/counter.html
+++ b/counter.html
@@ -65,8 +65,10 @@
 		}
 		.life::before {
 			content: '❤️';
-			color: #0001;
+			color: transparent;
+			margin-left: -0.07em;
 			position: absolute;
+			text-shadow: 0 0 0 rgba(0,0,0,0.1);
 			vertical-align: sub;
 		}
 
@@ -145,9 +147,10 @@
 		}
 		.white::before {
 			content: '☀️';
-			color:#0001;
-			margin-left: -0.3em;
+			color: transparent;
+			margin-left: -0.38em;
 			position: absolute;
+			text-shadow: 0 0 0 rgba(0,0,0,0.1);
 			vertical-align: sub;
 		}
 		.blue {
@@ -155,9 +158,10 @@
 		}
 		.blue::before {
 			content: '💧';
-			color: #0001;
-			margin-left: -0.3em;
+			color: transparent;
+			margin-left: -0.18em;
 			position: absolute;
+			text-shadow: 0 0 0 rgba(0,0,0,0.1);
 			vertical-align: sub;
 		}
 		.black {
@@ -165,9 +169,10 @@
 		}
 		.black::before {
 			content: '💀';
-			color: #0001;
-			margin-left: -0.3em;
+			color: transparent;
+			margin-left: -0.35em;
 			position: absolute;
+			text-shadow: 0 0 0 rgba(0,0,0,0.1);
 			vertical-align: sub;
 		}
 		.red {
@@ -175,9 +180,10 @@
 		}
 		.red::before {
 			content: '🔥';
-			color: #0001;
-			margin-left: -0.3em;
+			color: transparent;
+			margin-left: -0.25em;
 			position: absolute;
+			text-shadow: 0 0 0 rgba(0,0,0,0.1);
 			vertical-align: sub;
 		}
 		.green {
@@ -185,9 +191,10 @@
 		}
 		.green::before {
 			content: '🌳';
-			color: #0001;
-			margin-left: -0.3em;
+			color: transparent;
+			margin-left: -0.31em;
 			position: absolute;
+			text-shadow: 0 0 0 rgba(0,0,0,0.1);
 			vertical-align: sub;
 		}
 	</style>
